# rt-claw

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  GEMINI.md  Kconfig  LICENSE  Makefile  README.md  README_zh.md  SConstruct  claw_config.h  claw_gen_config.h.in  link.lds  meson.build  meson_options.txt  rtconfig.h  rtconfig.py
.agents/: README.md
.agents/skills/rt-claw-build/: SKILL.md
.agents/skills/rt-claw-ci-coverage/: SKILL.md
.agents/skills/rt-claw-code-explorer/: SKILL.md
.agents/skills/rt-claw-diagnose/: SKILL.md
.agents/skills/rt-claw-docs-sync/: SKILL.md
.agents/skills/rt-claw-new-module/: SKILL.md
.agents/skills/rt-claw-osal-review/: SKILL.md
.agents/skills/rt-claw-platform-port/: SKILL.md
.agents/skills/rt-claw-precommit/: SKILL.md
.agents/skills/rt-claw-testing/: SKILL.md
.claude/skills/build-test/: SKILL.md
.claude/skills/diagnose/: SKILL.md
.claude/skills/new-module/: SKILL.md
.claude/skills/platform-port/: SKILL.md
.claude/skills/sync-docs/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: agent-skills.yml  build-firmware.yml  ci-build-matrix.yml  ci-online-integration.yml  ci-platformio.yml  ci-qemu-correctness.yml
applications/: main.c
claw/: claw_init.c  meson.build
claw/core/: claw_errno.c  driver_core.c  gateway.c  heartbeat.c  scheduler.c  service_core.c  tool_core.c
claw/services/ai/: ai_engine.c  ai_memory.c  ai_skill.c
claw/services/im/: feishu.c  im_util.c  telegram.c
claw/services/net/: net_service.c
claw/services/ota/: ota_service.c
claw/services/swarm/: swarm.c
claw/services/tools/: audio.c  lcd.c  sched.c  script.c  tools.c
claw/services/voice/: meson.build  voice_endpoint.c  voice_service.c  voice_stt.c  voice_tts.c
claw/shell/: shell_commands.c
claw/tools/: claw_tools.c  tool_gpio.c  tool_lcd.c  tool_net.c  tool_sched.c  tool_system.c
docs/: architecture.md
docs/en/: architecture-review.md  architecture.md  coding-style.md  esp32c3-qemu.md  getting-started.md  platformio.md  porting.md  tuning.md  usage.md
docs/en/competition/: project-intro.md  project-spec.md
docs/superpowers/specs/: 2026-05-03-zephyr-osal-backend-design.md  2026-05-03-zephyr-osal-backend-plan.md
docs/zh/: architecture-review.md  architecture.md  coding-style.md  esp32c3-qemu.md  getting-started.md  platformio.md  porting.md  tuning.md  usage.md
docs/zh/blog/: rtthread-qemu-guide.md
docs/zh/competition/: project-intro.md  project-spec.md
drivers/audio/espressif/: es8311_audio.c  es8388_audio.c
drivers/display/espressif/: ssd1306_oled.c
drivers/net/espressif/: wifi_manager.c
drivers/serial/espressif/: console.c
include/: claw_config.h
include/claw/: claw_config.h  claw_init.h  platform_net.h
include/claw/core/: claw_class.h  claw_driver.h  claw_errno.h  claw_service.h  claw_tool.h  gateway.h  heartbeat.h  scheduler.h
include/claw/shell/: shell_cmd.h  shell_commands.h
include/core/: gateway.h
include/osal/: claw_net.h  claw_os.h
include/platform/: scripting.h
osal/: meson.build
osal/freertos/: claw_kv_freertos.c  claw_net_freertos.c  claw_os_freertos.c
osal/linux/: claw_net_linux.c  claw_os_linux.c
osal/rtthread/: claw_net_rtthread.c  claw_os_rtthread.c
osal/zephyr/: claw_kv_zephyr.c  claw_net_zephyr.c  claw_os_zephyr.c
platform/atk-esp32s3-lvgl/main/: CMakeLists.txt  idf_component.yml  main.c  ui.c  ui.h  ui_control.c  ui_control.h  ui_events.h  ui_helpers.c  ui_helpers.h
platform/atk-esp32s3-lvgl/main/images/: ui_img_logo_png.c
platform/atk-esp32s3-lvgl/main/screens/: ui_Screen1.c  ui_Screen1.h
platform/esp32c3/: platformio.ini  sdkconfig.defaults  sdkconfig.defaults.feishu
platform/esp32c3-qemu/: sdkconfig.defaults.demo  sdkconfig.defaults.feishu
platform/esp32c3/components/rt_claw/: CMakeLists.txt  Kconfig
platform/esp32c3/main/: main.c  (+1 more)
platform/esp32s3/: CMakeLists.txt  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.demo  sdkconfig.defaults.feishu
platform/esp32s3-qemu/: sdkconfig.defaults  sdkconfig.defaults.demo  sdkconfig.defaults.feishu
platform/esp32s3/main/: CMakeLists.txt  main.c
platform/linux/: board.c  local_voice_endpoint.c  local_voice_endpoint.h  main.c  meson.build  scripting.c  shell.c  web_voice_server.c  web_voice_server.h
platform/vexpress-a9/: SConscript  link.lds  micropython_main.c  mpputsnport.c  scripting.c
platform/vexpress-a9-qemu/: SConscript  rtconfig.py
platform/zephyr/: CMakeLists.txt  Kconfig  claw_gen_config.h.cmake  claw_sections.ld
platform/zephyr/boards/qemu_cortex_a9/: app.overlay  board.c  prj.conf
platform/zephyr/boards/qemu_cortex_m3/: app.overlay  board.c  prj.conf
platform/zephyr/src/: board.c  isrg_root_x1.inc  main.c  shell.c  zephyr_driver.c
platform/zephyr/zephyr/: module.yml
platform/zynq-a9/: FreeRTOSIPConfig.h  cross.ini  link.ld  main.c  meson.build  shell.c  startup.S  syscalls.c  test_main.c
platform/zynq-a9/drivers/: NetworkInterface.c
scripts/: api-proxy.py  check-agent-skills.py  check-patch.sh  gen-esp32c3-cross.py  gen-esp32s3-cross.py  gen-zephyr-cross.py  gen_atk_esp32s3_cross.py  ota-server.py  pio_meson_bridge.py  pio_post_configure.py  pio_pre_build.py  setup-esp-env.sh  test-meson-matrix.sh
scripts/ci/: install-system-deps.sh  package-esp-firmware.sh  qemu-smoke.sh  setup-zephyr-sdk.sh
src/: claw_init.c
src/core/: SConscript  gateway.c  gateway.h
src/tools/: claw_tools.c  claw_tools.h  tool_gpio.c  tool_lcd.c  tool_system.c
tests/functional/: test_boot.py  test_linux_boot.py  test_linux_kv.py  test_linux_python.py  test_linux_shell.py  test_vexpress_micropython.py
tests/qemu/: assert-log.sh  common.sh  run-online.sh  run-smoke.sh
tests/unit/: meson.build  run.py  test_ai_memory.c  test_ai_skill.c  test_gateway.c  test_im_util.c  test_runner.c  test_runner.h  test_script_tool.c  test_tools.c  test_voice_endpoint.c  test_voice_service.c
tests/unit/framework/: semihosting.h  test.h
tools/: api-proxy.py  esp32c3-build.sh  esp32c3-qemu-run.sh  qemu-dbg.sh  qemu-run.sh  setup-esp-env.sh
website/: blog.html  docs.html  index.html  voice.html
(+79 files in other folders)
