option('osal', type: 'combo',
    choices: ['rtthread', 'freertos', 'none'],
    value: 'none',
    description: 'OSAL backend (none = library only, no OSAL compiled)')
option('rtthread_bsp', type: 'string', value: 'platform/vexpress-a9-qemu',
    description: 'RT-Thread BSP directory for rtconfig.h/lwipopts.h')
option('rtthread_cpuport', type: 'string',
    value: 'vendor/os/rt-thread/libcpu/arm/cortex-a',
    description: 'RT-Thread cpuport include directory')

option('swarm', type: 'boolean', value: true,
    description: 'Enable swarm service')
option('sched', type: 'boolean', value: true,
    description: 'Enable scheduler')
option('skill', type: 'boolean', value: true,
    description: 'Enable AI skill framework')
option('tool_gpio', type: 'boolean', value: true,
    description: 'Enable GPIO tool')
option('tool_system', type: 'boolean', value: true,
    description: 'Enable system info tool')
option('tool_sched', type: 'boolean', value: true,
    description: 'Enable scheduler tool')
option('tool_net', type: 'boolean', value: true,
    description: 'Enable network (HTTP) tool')
option('heartbeat', type: 'boolean', value: false,
    description: 'Enable periodic AI heartbeat (requires sched)')

option('ai_api_key', type: 'string', value: '',
    description: 'AI API key (overrides CONFIG_RTCLAW_AI_API_KEY)')
option('ai_api_url', type: 'string', value: '',
    description: 'AI API URL (overrides CONFIG_RTCLAW_AI_API_URL)')
option('ai_model', type: 'string', value: '',
    description: 'AI model name (overrides CONFIG_RTCLAW_AI_MODEL)')
option('feishu_app_id', type: 'string', value: '',
    description: 'Feishu App ID (overrides CONFIG_RTCLAW_FEISHU_APP_ID)')
option('feishu_app_secret', type: 'string', value: '',
    description: 'Feishu App Secret (overrides CONFIG_RTCLAW_FEISHU_APP_SECRET)')
